Closed Bug 1242895 Opened 10 years ago Closed 10 years ago

[non-e10s][TSF] Forcibly committing composition during TSF locking document fails to commit composition and makes "hidden" composition string

Categories

(Core :: Widget: Win32, defect)

All
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
e10s - ---
firefox47 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

()

Details

(Keywords: inputmethod)

Attachments

(1 file, 1 obsolete file)

STR: 1. Load https://jsfiddle.net/d_toybox/27knkt43/1/ 2. Type "aiu" with Japanese IME in non-10s mode Expected result: The editor value should be あ12い34う56 Actual result: The editor value becomes あ12 and you can convert "hidden" composition string with pressing spacebar.
We should put off to commit/cancel composition after unlocking the document when it's requested during a document lock since TSF needs to lock the document *again* for committing/cancelling the composition.
Attachment #8712115 - Flags: review?(m_kato)
Oops, fixing odd indent...
Attachment #8712115 - Attachment is obsolete: true
Attachment #8712115 - Flags: review?(m_kato)
Attachment #8712117 - Flags: review?(m_kato)
tracking-e10s: --- → -
Attachment #8712117 - Flags: review?(m_kato) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/19d18ff9867684ed9cae053056d4fab337335008 Bug 1242895 Put off to commit/cancel composition after unlocking the document in TSF mode r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: