Bug 1242895 Put off to commit/cancel composition after unlocking the document in TSF mode r=m_kato